# HydraDX-math

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml  tests.yml
benches/: benchmarks.rs  subpools.rs
demo/: index.html  index.js  package-lock.json  package.json
proptest-regressions/ema/: float.txt  invariants.txt
proptest-regressions/xyk/: invariants.txt
src/: amm.rs  experimental.rs  fee.rs  fraction.rs  lib.rs  math.rs  p12.rs  proptests.rs  ratio.rs  rational.rs  stableswap.rs  test_pow_accuracy.rs  test_utils.rs  tests.rs  transcendental.rs  types.rs  wasm.rs  xyk.rs
src/dynamic_fees/: math.rs  mod.rs  tests.rs  types.rs
src/ema/: decimal_math.rs  float.rs  high_precision.rs  invariants.rs  math.rs  mod.rs  rational.rs  test_data.rs  tests.rs
src/ema/tests/: invariants.rs  mod.rs
src/fee/: fee.rs
src/lbp/: invariants.rs  lbp.rs  mod.rs  test_accuracy.rs  tests.rs  traits.rs  types.rs
src/liquidity_mining/: invariants.rs  liquidity_mining.rs  mod.rs  tests.rs
src/omnipool/: invariants.rs  math.rs  mod.rs  tests.rs  types.rs
src/omnipool_subpools/: math.rs  mod.rs  tests.rs  types.rs
src/stableswap/: math.rs  mod.rs  multi_math.rs
src/stableswap/tests/: invariants.rs  mod.rs  multi_assets.rs  tests.rs  two_assets.rs
src/stableswap_v1/: mod.rs
src/subpools/: math.rs
src/support/: mod.rs  rational.rs  traits.rs  u128.rs
src/xyk/: invariants.rs  math.rs  tests.rs
