[package]
authors = ['GalacticCouncil']
edition = '2018'
homepage = 'https://github.com/galacticcouncil/hydradx-math'
license = 'Apache-2.0'
name = "hydra-dx-math"
description = "A collection of utilities to make performing liquidity pool calculations more convenient."
repository = 'https://github.com/galacticcouncil/hydradx-math'
version = "4.2.0"

[dependencies]
primitive-types = {default-features = false, version = '0.8.0'}
num-traits = {default-features = false, version = "0.2.14"}
fixed = "1.9.0"
lazy_static = {features = ['spin_no_std'], version = '1.4.0'}
# Added because of use of the FixedU128
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = "22d40c761a985482f93bbbea5ba4199bdba74f8e", default-features = false }

[dev-dependencies]
rand = { version = "0.7", default-features = false }
rand_xoshiro = "0.4"
criterion = "0.3"
approx = "0.3.0"

[features]
default = []
std = []
p12 = ['lazy_static/spin_no_std']

[[bench]]
name = "benchmarks"
harness = false
