[package]
authors = ['GalacticCouncil']
edition = '2021'
homepage = 'https://github.com/galacticcouncil/hydradx-math'
license = 'Apache-2.0'
name = "hydra-dx-math"
description = "A collection of utilities to make performing liquidity pool calculations more convenient."
repository = 'https://github.com/galacticcouncil/hydradx-math'
version = "4.8.0"

[dependencies]
primitive-types = {default-features = false, version = '0.12.0'}
num-traits = {default-features = false, version = "0.2.14"}
fixed = "=1.15.0"
# Added because of use of the FixedU128
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.29", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features= ["std_rng"] }
rand_xoshiro = "0.6.0"
criterion = "0.4.0"
approx = "0.5.1"
proptest = "1.0.0"
test-case = "2.2.1"

[features]
default = ["std"]
std = ["sp-arithmetic/std"]
runtime-benchmarks = []

[[bench]]
name = "benchmarks"
harness = false
